# sova

./: .coverage  .gitignore  LICENSE  README.md  SKILL.md.example  docs  pyproject.toml  sova.py
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  __main__.py  calibration.py  evaluate.py  ground_truth.json  judge.py  run_benchmark.py  search_interface.py
benchmarks/results/: baseline-20260225.json  baseline.json  decay-085.json  decay-090.json  decay-095.json  dhondt-diversity.json  exact-boost.json  fts-only.json  high-rrf-weight.json  llama-server-migration.json  low-rrf-weight.json  mmr-lambda07.json  no-diversity.json  no-exact.json  no-index-penalty.json  no-reranker-20260225.json  rerank-optimized.json  reranker-4b.json  rrf-k120.json  rrf-k20.json  score-decay-07.json  score-decay-08.json  score-decay-085.json  strong-diversity.json  vector-only.json
scripts/: build-macos-onefile.sh
sova/: __init__.py  __main__.py  cache.py  check.py  cli.py  config.py  db.py  diversity.py  extract.py  install.py  llama_client.py  ollama_client.py  projects.py  search.py  ui.py
tests/: test_benchmarks_cli.py  test_cache.py  test_cli.py  test_config.py  test_db.py  test_diversity.py  test_e2e.py  test_evaluate.py  test_extract.py  test_judge.py  test_llama_client.py  test_ollama.py  test_projects.py  test_search.py
