[project]
name = "sova"
version = "1.0.0"
description = "Local document semantic search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
    "pymupdf4llm>=0.2.9",
    "pymupdf-layout>=1.26.6",
    "rich>=14.3.1",
    "sqliteai-vector>=0.9.70",
]

[project.scripts]
sova = "sova.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sova"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
